# ic-mnist

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/ic_mnist_backend/: Cargo.toml  ic_mnist_backend.did
src/ic_mnist_backend/src/: lib.rs  web.rs
src/ic_mnist_frontend/src/: .ic-assets.json5  index.html  index.js
